@@ -1,0 +1,3 @@
+*.html
+*.txt
+*.md
